--- a/about.html
+++ b/about.html
@@ -46,7 +46,15 @@
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
   </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9PB49S9KJD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-9PB49S9KJD');
+</script>
   <body>
     <div class="hero_area">
       <!-- header section strats -->
