--- a/faq.html
+++ b/faq.html
@@ -55,6 +55,15 @@
       }
     </style>
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9PB49S9KJD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9PB49S9KJD');
+</script>
 
   <body class="sub_page">
     <div class="hero_area">
