--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
               <p>
                 Handmade Organic Soap for Sensitive Skin Every soap bar we make is crafted by hand, using the finest natural ingredients like organic shea butter, coconut oil, and olive oil. Our soap is designed for all skin types, especially sensitive skin, ensuring that it’s free from harsh chemicals, fragrances, and artificial additives.
 Why Choose SorSoap?
-•	Organic Ingredients: We only use the highest quality organic ingredients, ensuring that every product is safe and effective.
-•	Sustainable Practices: Our eco-friendly approach reduces our carbon footprint and promotes environmental responsibility.
+	Organic Ingredients: We only use the highest quality organic ingredients, ensuring that every product is safe and effective.
+	Sustainable Practices: Our eco-friendly approach reduces our carbon footprint and promotes environmental responsibility.
 
               </p>
               <a href="about.html"> Read More </a>
