--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
                     <div class="detail-box">
                       <h1>A Sustainable Soap Brand You Can Trust</h1>
                       <p>
-                        •	Ethical Brand: We are committed to fair labor practices and cruelty-free products, supporting ethical soap-making practices.
+                        	Ethical Brand: We are committed to fair labor practices and cruelty-free products, supporting ethical soap-making practices.
                         Our Vision for the Future SorSoap is not just about making soap – it’s about making a difference. We are proud to be part of a movement towards cleaner, greener, and more ethical skincare products. As we grow, we aim to inspire others to make more sustainable choices for their skincare routines.
                         
                         
